--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-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
-</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBUVx9ZjvMM4OD709gtGGcEMVBUj4wguPg</string>
 </resources>
