--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBUVx9ZjvMM4OD709gtGGcEMVBUj4wguPg</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Em Xin Phep Che Key API</string>
 </resources>
